--- a/new/style.css
+++ b/new/style.css
@@ -5,15 +5,30 @@
     box-sizing: border-box;
 }
 
+
+:root{
+    --body-color: #efefefef;
+    --nav-color: #1876f2;
+    --bg-color: #fff;
+
+}
+.dark-theme{
+    --body-color: #0a0a0a;
+    --nav-color: #000;
+    --bg-color: #000;
+
+}
+
 body {
-    background: #efefef;
+    background: var(--body-color);
+    transition: background 0.4s;
 }
 
 nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #1876f2;
+    background: var(--nav-color);
     padding: 5px 5%;
     position: sticky;
     top: 0;
@@ -106,7 +121,7 @@ nav {
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    background: #fff;
+    background: var(--bg-color);
     padding: 20px;
     border-radius: 4px;
     color: #626262;
@@ -296,7 +311,7 @@ nav {
 }
 .write-post-container{
     width: 100%;
-    background: #fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -349,7 +364,7 @@ nav {
 }
 .post-container{
     width: 100%;
-    background:#fff;
+    background: var(--bg-color);
     border-radius: 6px;
     padding: 20px;
     color: #626262;
@@ -477,6 +492,7 @@ margin-bottom: 5px;
     border-radius: 15px;
     padding: 2px 3px;
     cursor: pointer;
+    transition: padding-left 0.5s, background 0.5s;
 }
 #dark-btn span{
     width: 18px;
@@ -484,4 +500,10 @@ margin-bottom: 5px;
     background:#fff;
     border-radius: 50%;
     display: inline-block;
+}
+#dark-btn.dark-btn-on{
+
+    padding-left: 23px;
+    background: #000;
+
 }
